# beta_protoc

./: README.md  main.py  pyproject.toml  test_compiler.py
compiler/: __init__.py  cli.py
compiler/common/: __init__.py  data_types.py  errors.py  utils.py  validators.py
compiler/compiler/: __init__.py  generator.py
compiler/core/: generator.py  language.py
compiler/protoc_schema/: __init__.py  field.py  message.py  schema.py
compiler/templates/C/: CMakeLists.txt.j2  dispatcher.c.j2  dispatcher.h.j2  message.c.j2  message.h.j2
example/: msg.json
protoc_common_code/C/: beta_protoc.c  beta_protoc.h
protoc_common_code/C/beta_com/: CMakeLists.txt
protoc_common_code/C/beta_com/include/: beta_protoc.h
protoc_common_code/C/beta_protoc/src/: beta_protoc.c
templates/C/: message.h.j2
