[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beta_protoc_compiler"
description = "A protocol compiler plugin for generating code based on JSON schema definitions."
version = "0.1.0"
dependencies = [
    "jinja2",
    "pydantic",
]

[project.scripts]
beta_protoc_compiler = "compiler.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["compiler"]